# LinuxApplicationDevelopment

TerminalProject_01/: CMakeLists.txt
TerminalProject_01/resources/: test.txt
TerminalProject_01/src/: show.c
